# app/Http/Resources/PaymentResource.php
@@ -5,7 +5,7 @@ namespace App\Http\Resources;
 use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\JsonResource;
 
-class SubscriptionResource extends JsonResource
+class PaymentResource extends JsonResource
 {
     /**
      * Transform the resource into an array.
@@ -17,10 +17,10 @@ class SubscriptionResource extends JsonResource
         return [
             'id' => $this->id,
             'user_id' => $this->user_id,
-            'plan' => SubscriptionPlanResource::make($this->plan),
-            'start_date' => $this->start_date,
-            'end_date' => $this->end_date,
-            'status' => $this->status,
+            'subscription_id' => $this->subscription_id,
+            'amount' => $this->amount,
+            'payment_method' => $this->payment_method,
+            'payment_status' => $this->payment_status,
             'created_at' => $this->created_at,
         ];
     }
